# altune

./: .gitignore  .mcp.json  CLAUDE.md  README.md  apps.json  commitlint.config.js  docker-compose.yml  package-lock.json  package.json
.claude/: settings.json  (+1 more)
services/api/: .env.example  CLAUDE.md  pyproject.toml
services/api/migrations/: env.py  script.py.mako
services/api/migrations/versions/: 08b831424865_initial_marker.py  a1c4e7b9d2f3_add_track_acquisition_and_dedup.py  b3d5f8a1c7e2_add_track_metadata_and_audio_ref.py  c1a2b3d4e5f6_add_failure_reason.py  c4e6f9a2b1d8_add_playlists_tables.py  d15c001f8eaa_add_discovery_search_history.py  e2bcd72a93f1_add_discovery_search_clicks.py  f6d247fb8b49_create_tracks_table.py
services/api/scripts/: README.md  import_legacy_library.py  ranking_eval.py  seed_dev_tracks.sql
services/api/scripts/discovery_eval/: __init__.py  corpus.py  inspect_query.py  run_eval.py  score.py  snapshot_library.py
services/api/scripts/discovery_eval/data/: library.json
services/api/src/altune/: __init__.py
services/api/src/altune/adapters/: __init__.py
services/api/src/altune/adapters/inbound/: __init__.py
services/api/src/altune/adapters/outbound/: __init__.py
services/api/src/altune/application/: __init__.py
services/api/src/altune/application/auth/: exceptions.py  ports.py
services/api/src/altune/application/catalog/: CLAUDE.md  add_track_to_library.py  add_track_to_playlist.py  create_playlist.py  delete_playlist.py  get_playlist.py  list_playlists.py  list_tracks.py  ports.py  reconcile_track_status.py  remove_track_from_playlist.py  rename_playlist.py  reorder_playlist_tracks.py
services/api/src/altune/application/discovery/: CLAUDE.md  circuit_breaker.py  dedup.py  get_album_tracks.py  get_artist_content.py  list_search_history.py  normalize.py  ports.py  quality_scorer.py  record_click.py  search_music.py  url_router.py
services/api/src/altune/domain/: CLAUDE.md  __init__.py
services/api/src/altune/domain/catalog/: CLAUDE.md  acquisition_status.py  dedup.py  events.py  playlist.py  playlist_id.py  track.py  track_id.py
services/api/src/altune/domain/discovery/: CLAUDE.md  confidence.py  content_validation_status.py  entity_resolution_tier.py  events.py  provider.py  provider_status.py  quality_score.py  result_kind.py  search_click.py  search_history_entry.py  search_query.py  search_result.py  source_ref.py
services/api/src/altune/platform/: __init__.py  app.py  auth.py  config.py  container.py  db.py  logging.py  wiring.py
services/api/tests/: conftest.py
services/api/tests/_doubles/: fake_artist_track_title_source.py  fake_audio_searcher.py  fake_audio_store.py  in_memory_artwork_cache.py  in_memory_query_cache.py  in_memory_search_click_repository.py  in_memory_search_history_repository.py  in_memory_search_provider.py  in_memory_token_verifier.py  in_memory_track_repository.py  spy_mbid_resolver.py
services/api/tests/contract/: test_track_repository_contract.py
services/api/tests/e2e/: .gitkeep  test_audio_stream.py  test_auth_rejection_returns_401.py  test_health_remains_unauthenticated.py  test_tracks_isolation_post_auth.py  test_tracks_route.py
services/api/tests/eval/: golden_cases.py  metrics.py  test_ranking_quality.py
services/api/tests/integration/: .gitkeep  test_catalog_migration_backfill.py  test_catalog_migration_dedup.py  test_discovery_migrations.py  test_health_db.py  test_sqlalchemy_track_repository.py  test_supabase_jwt_verifier_claims.py  test_supabase_jwt_verifier_happy_path.py  test_supabase_jwt_verifier_jwks_cache.py  test_track_repository_add.py
services/api/tests/unit/: test_app_smoke.py
(+1582 files in other folders)
