[project]
name = "altune-api"
version = "0.0.0"
description = "Altune backend — music manager API. Hexagonal architecture."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "uvicorn[standard]>=0.32",
    "structlog>=24.4",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pyjwt[crypto]>=2.13.0",
    "redis>=7.4.0",
    "rapidfuzz>=3.14.5",
    "yt-dlp>=2026.3.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "hypothesis>=6.115",
    "respx>=0.21",
    "ruff>=0.7",
    "mypy>=1.13",
    "testcontainers>=4.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/altune"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "UP",       # pyupgrade
    "N",        # pep8-naming
    "S",        # flake8-bandit (security)
    "T20",      # flake8-print (no print)
    "SIM",      # flake8-simplify
    "TCH",      # flake8-type-checking
    "RUF",      # ruff-specific
]
ignore = [
    "E501",   # line length is checked by `line-length` above; ignore in lint for soft-wrap-friendliness
    "S101",   # `assert` is fine in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]  # assert, hardcoded passwords in fixtures

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "testcontainers.*",
    "respx.*",
    # AIDEV-NOTE: runtime deps below are declared in [project.dependencies] but may not be
    # installed in the user's environment yet (e.g., before `uv sync`). Ignoring stubs prevents
    # mypy from failing on scaffold-time imports. Remove an entry once `uv sync` is run and
    # the package is verifiably present + types resolve.
    "fastapi.*",
    "structlog.*",
    "pydantic_settings.*",
    "sqlalchemy.*",
    "alembic.*",
    "dotenv.*",
    "asyncpg.*",
    "rapidfuzz.*",
    "yt_dlp.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=altune",
    "--cov-report=term-missing",
    "--cov-fail-under=0",
]
markers = [
    "unit: fast unit tests, no I/O",
    "integration: tests using testcontainers or real-ish dependencies",
    "e2e: full-stack tests against running server",
    "contract: shared port-contract tests parametrized over multiple adapter implementations",
    "slow: marker for slow tests (deselect with -m 'not slow')",
]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["src/altune"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
